Examvault/compile3.log
src\gui\CalculatorView.java:93: error: local variables referenced from a lambda expression must be final or effectively final
        btn.setOnMouseEntered(e -> btn.setStyle("-fx-font-size: 16px; -fx-background-color: " + buttonColor +
                                                                                                ^
src\gui\CalculatorView.java:95: error: local variables referenced from a lambda expression must be final or effectively final
        btn.setOnMouseExited(e -> btn.setStyle("-fx-font-size: 16px; -fx-background-color: " + buttonColor +
                                                                                               ^
2 errors
